2013-02-22  Glenn Morris  <rgm@gnu.org>

	* textmodes/sgml-mode.el (sgml-xml-mode): Move before use.
	(sgml-transformation-function): Give it a :set function.
	(sgml-tag): Doc fix.

	* cmuscheme.el (scheme-buffer):
	* progmodes/inf-lisp.el (inferior-lisp-buffer):
	* progmodes/tcl.el (inferior-tcl-buffer):
	* textmodes/tex-mode.el (tex-command): Doc fixes.

	* image-mode.el (image-mode): Add mouse bindings for mode-line-process.

	* htmlfontify.el (hfy-default-header): Encode title string.  (Bug#7457)

2013-02-21  Bastien Guerry  <bzg@gnu.org>

	* cmuscheme.el (scheme-buffer): Fix docstring.  (Bug#13778)

2013-02-21  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-info-current-defun): Enhance
	match-data cluttering prevention.

2013-02-21  Glenn Morris  <rgm@gnu.org>

	* net/tramp.el (tramp-get-debug-buffer): Ensure outline.el is not
	loaded while outline-regexp is let bound.  (Bug#9584)

2013-02-21  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-info-current-defun): Fix failed
	defun name retrieval because of unwanted match-data cluttering.

2013-02-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-ssh-controlmaster-template): Make it a
	defconst.  Apply independent check for ControlPersist.

	* net/tramp-sh.el (tramp-sh-handle-set-file-times): Set $UTC only
	temporarily, via "env".

2013-02-21  Glenn Morris  <rgm@gnu.org>

	* info.el (Info-enable-edit): Remove.
	(Info-edit): Disable it rather than using Info-enable.
	(Info-edit-mode-hook, Info-edit-map, Info-edit-mode, Info-edit)
	(Info-cease-edit): Make editing of Info files obsolete.

	* informat.el (Info-tagify):
	Handle buffers not visiting files.  (Bug#13763)

2013-02-21  Juanma Barranquero  <lekktu@gmail.com>

	* calc/calc-graph.el (calc-graph-show-dumb): Fix typo.

2013-02-21  Glenn Morris  <rgm@gnu.org>

	* files.el (basic-save-buffer): Move check for existing parent
	directory after hooks.  (Bug#13773)
