@@ -1,3 +1,10 @@
+2013-02-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-tramp-file-p): Fix docstring.
+
+	* net/tramp-sh.el (tramp-sh-handle-insert-directory): Handle
+	multibyte file names.
+
 2013-02-22  Glenn Morris  <rgm@gnu.org>
 
 	* textmodes/sgml-mode.el (sgml-xml-mode): Move before use.
